<resources>
    <string name="app_name">נוכחות</string>
    <string name="action_settings">הגדרות</string>
    <string name="password">סיסמה</string>
    <string name="user">שם משתמש</string>
    <string name="login">כניסה</string>
    <string name="login_header">כניסה לאתר tlushim.co.il</string>
    <string name="login_image">Login Image</string>
    <string name="overHours">שעות נוספות</string>
    <string name="lessHours">שעות חסרות</string>
    <string name="youLess">חסר</string>
    <string name="youMore">יתרה</string>
    <string name="date">תאריך</string>
    <string name="enter">כניסה</string>
    <string name="exit">יציא</string>
    <string name="total_hours">סך הכול</string>
    <string name="hours">שעות</string>
    <string name="about">אודות</string>
    <string name="tlushim_co_il">התוכנה מבוססת על פרסינג של אתר tlushim.co.il</string>
    <string name="coded_by_gchaimke_gmail_com">Coded by Gchaimke@gmail.com</string>
    <string name="menu_date">חודש לפני</string>
    <string name="settings">הגדרות</string>
    <string name="today">חודש הזה</string>
    <string name="renew">לחדש</string>
    <string name="update_ok">הנתונים עודכנו בהצלחה!</string>
    <string name="update_error">אין נתונים זמינים…</string>
    <string name="no_internet">אין אינטרנט…</string>
    <string name="get_update">מעדכן נתונים…</string>
    <string name="prev_month">מחפש חודש קודם…</string>
    <string name="no_new">אין נתונים חדשים.</string>
    <string name="back">חזרה</string>
    <string name="logo">Logo</string>
</resources>