<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reload"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:numericShortcut="1"
        android:title="@string/renew"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/prevMonth"
        android:icon="@android:drawable/ic_menu_today"
        android:numericShortcut="2"
        android:title="@string/menu_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:numericShortcut="3"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>