<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biorhyme_extrabold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textColor="#2351EC"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="User"
        android:ems="10"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layoutDirection="ltr"
        android:padding="20dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:onClick="loginButtonClick"
        android:padding="20dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>